hw4/y.output
Terminals unused in grammar

   BOOLEAN


State 59 conflicts: 6 reduce/reduce
State 60 conflicts: 8 shift/reduce
State 130 conflicts: 9 shift/reduce
State 133 conflicts: 8 shift/reduce, 15 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list funct_def decl_and_def_list

    2 decl_list: decl_list var_decl
    3          | decl_list const_decl
    4          | decl_list funct_decl
    5          | %empty

    6 decl_and_def_list: decl_and_def_list var_decl
    7                  | decl_and_def_list const_decl
    8                  | decl_and_def_list funct_decl
    9                  | decl_and_def_list funct_def
   10                  | %empty

   11 $@1: %empty

   12 funct_def: scalar_type ID L_PAREN R_PAREN $@1 compound_statement

   13 $@2: %empty

   14 funct_def: scalar_type ID L_PAREN parameter_list R_PAREN $@2 compound_statement

   15 $@3: %empty

   16 funct_def: VOID ID L_PAREN R_PAREN $@3 compound_statement

   17 $@4: %empty

   18 funct_def: VOID ID L_PAREN parameter_list R_PAREN $@4 compound_statement

   19 funct_decl: scalar_type ID L_PAREN R_PAREN SEMICOLON
   20           | scalar_type ID L_PAREN parameter_list R_PAREN SEMICOLON
   21           | VOID ID L_PAREN R_PAREN SEMICOLON
   22           | VOID ID L_PAREN parameter_list R_PAREN SEMICOLON

   23 parameter_list: parameter_list COMMA scalar_type ID
   24               | parameter_list COMMA scalar_type array_decl
   25               | scalar_type array_decl
   26               | scalar_type ID

   27 var_decl: scalar_type identifier_list SEMICOLON

   28 identifier_list: identifier_list COMMA ID
   29                | identifier_list COMMA ID ASSIGN_OP logical_expression
   30                | identifier_list COMMA array_decl ASSIGN_OP initial_array
   31                | identifier_list COMMA array_decl
   32                | array_decl ASSIGN_OP initial_array
   33                | array_decl
   34                | ID ASSIGN_OP logical_expression
   35                | ID

   36 initial_array: L_BRACE literal_list R_BRACE

   37 literal_list: literal_list COMMA logical_expression
   38             | logical_expression
   39             | %empty

   40 const_decl: CONST scalar_type const_list SEMICOLON

   41 const_list: const_list COMMA ID ASSIGN_OP literal_const
   42           | ID ASSIGN_OP literal_const

   43 array_decl: ID dim

   44 dim: dim ML_BRACE INT_CONST MR_BRACE
   45    | ML_BRACE INT_CONST MR_BRACE

   46 $@5: %empty

   47 compound_statement: $@5 L_BRACE var_const_stmt_list R_BRACE

   48 var_const_stmt_list: var_const_stmt_list statement
   49                    | var_const_stmt_list var_decl
   50                    | var_const_stmt_list const_decl
   51                    | %empty

   52 statement: compound_statement
   53          | simple_statement
   54          | conditional_statement
   55          | while_statement
   56          | for_statement
   57          | function_invoke_statement
   58          | jump_statement

   59 simple_statement: variable_reference ASSIGN_OP logical_expression SEMICOLON

   60 $@6: %empty

   61 simple_statement: PRINT $@6 logical_expression SEMICOLON
   62                 | READ variable_reference SEMICOLON

   63 conditional_statement: IF L_PAREN conditional_if R_PAREN compound_statement

   64 $@7: %empty

   65 conditional_statement: IF L_PAREN conditional_if R_PAREN compound_statement $@7 ELSE compound_statement

   66 conditional_if: logical_expression

   67 $@8: %empty

   68 $@9: %empty

   69 while_statement: WHILE L_PAREN logical_expression $@8 R_PAREN $@9 compound_statement

   70 $@10: %empty

   71 while_statement: $@10 DO compound_statement WHILE L_PAREN logical_expression R_PAREN SEMICOLON

   72 $@11: %empty

   73 for_statement: FOR L_PAREN initial_expression SEMICOLON control_expression SEMICOLON increment_expression R_PAREN $@11 compound_statement

   74 initial_expression: initial_expression COMMA statement_for
   75                   | initial_expression COMMA logical_expression
   76                   | logical_expression
   77                   | statement_for
   78                   | %empty

   79 control_expression: control_expression COMMA statement_for
   80                   | control_expression COMMA logical_expression
   81                   | logical_expression
   82                   | statement_for
   83                   | %empty

   84 increment_expression: increment_expression COMMA statement_for
   85                     | increment_expression COMMA logical_expression
   86                     | logical_expression
   87                     | statement_for
   88                     | %empty

   89 statement_for: variable_reference ASSIGN_OP logical_expression

   90 function_invoke_statement: ID L_PAREN logical_expression_list R_PAREN SEMICOLON
   91                          | ID L_PAREN R_PAREN SEMICOLON

   92 jump_statement: CONTINUE SEMICOLON
   93               | BREAK SEMICOLON
   94               | RETURN logical_expression SEMICOLON

   95 variable_reference: ID
   96                   | variable_reference dimension

   97 dimension: ML_BRACE arithmetic_expression MR_BRACE

   98 logical_expression: logical_expression OR_OP logical_term
   99                   | logical_term

  100 logical_term: logical_term AND_OP logical_factor
  101             | logical_factor

  102 logical_factor: NOT_OP logical_factor
  103               | relation_expression

  104 relation_expression: arithmetic_expression relation_operator arithmetic_expression
  105                    | arithmetic_expression

  106 relation_operator: LT_OP
  107                  | LE_OP
  108                  | EQ_OP
  109                  | GE_OP
  110                  | GT_OP
  111                  | NE_OP

  112 arithmetic_expression: arithmetic_expression add_op term
  113                      | relation_expression
  114                      | term

  115 add_op: ADD_OP
  116       | SUB_OP

  117 term: term mul_op factor
  118     | factor

  119 mul_op: MUL_OP
  120       | DIV_OP
  121       | MOD_OP

  122 factor: variable_reference
  123       | SUB_OP variable_reference
  124       | L_PAREN logical_expression R_PAREN
  125       | SUB_OP L_PAREN logical_expression R_PAREN
  126       | ID L_PAREN logical_expression_list R_PAREN
  127       | SUB_OP ID L_PAREN logical_expression_list R_PAREN
  128       | ID L_PAREN R_PAREN
  129       | SUB_OP ID L_PAREN R_PAREN
  130       | literal_const

  131 logical_expression_list: logical_expression_list COMMA logical_expression
  132                        | logical_expression

  133 scalar_type: INT
  134            | DOUBLE
  135            | STRING
  136            | BOOL
  137            | FLOAT

  138 literal_const: INT_CONST
  139              | SUB_OP INT_CONST
  140              | FLOAT_CONST
  141              | SUB_OP FLOAT_CONST
  142              | SCIENTIFIC
  143              | SUB_OP SCIENTIFIC
  144              | STR_CONST
  145              | TRUE
  146              | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
LE_OP (258) 107
NE_OP (259) 111
GE_OP (260) 109
EQ_OP (261) 108
AND_OP (262) 100
OR_OP (263) 98
READ (264) 62
BOOLEAN (265)
WHILE (266) 69 71
DO (267) 71
IF (268) 63 65
ELSE (269) 65
TRUE (270) 145
FALSE (271) 146
FOR (272) 73
INT (273) 133
PRINT (274) 61
BOOL (275) 136
VOID (276) 16 18 21 22
FLOAT (277) 137
DOUBLE (278) 134
STRING (279) 135
CONTINUE (280) 92
BREAK (281) 93
RETURN (282) 94
CONST (283) 40
L_PAREN (284) 12 14 16 18 19 20 21 22 63 65 69 71 73 90 91 124 125
    126 127 128 129
R_PAREN (285) 12 14 16 18 19 20 21 22 63 65 69 71 73 90 91 124 125
    126 127 128 129
COMMA (286) 23 24 28 29 30 31 37 41 74 75 79 80 84 85 131
SEMICOLON (287) 19 20 21 22 27 40 59 61 62 71 73 90 91 92 93 94
ML_BRACE (288) 44 45 97
MR_BRACE (289) 44 45 97
L_BRACE (290) 36 47
R_BRACE (291) 36 47
ADD_OP (292) 115
SUB_OP (293) 116 123 125 127 129 139 141 143
MUL_OP (294) 119
DIV_OP (295) 120
MOD_OP (296) 121
ASSIGN_OP (297) 29 30 32 34 41 42 59 89
LT_OP (298) 106
GT_OP (299) 110
NOT_OP (300) 102
ID (301) 12 14 16 18 19 20 21 22 23 26 28 29 34 35 41 42 43 90 91 95
    126 127 128 129
INT_CONST (302) 44 45 138 139
FLOAT_CONST (303) 140 141
SCIENTIFIC (304) 142 143
STR_CONST (305) 144


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
decl_list (53)
    on left: 2 3 4 5, on right: 1 2 3 4
decl_and_def_list (54)
    on left: 6 7 8 9 10, on right: 1 6 7 8 9
funct_def (55)
    on left: 12 14 16 18, on right: 1 9
$@1 (56)
    on left: 11, on right: 12
$@2 (57)
    on left: 13, on right: 14
$@3 (58)
    on left: 15, on right: 16
$@4 (59)
    on left: 17, on right: 18
funct_decl (60)
    on left: 19 20 21 22, on right: 4 8
parameter_list (61)
    on left: 23 24 25 26, on right: 14 18 20 22 23 24
var_decl (62)
    on left: 27, on right: 2 6 49
identifier_list (63)
    on left: 28 29 30 31 32 33 34 35, on right: 27 28 29 30 31
initial_array (64)
    on left: 36, on right: 30 32
literal_list (65)
    on left: 37 38 39, on right: 36 37
const_decl (66)
    on left: 40, on right: 3 7 50
const_list (67)
    on left: 41 42, on right: 40 41
array_decl (68)
    on left: 43, on right: 24 25 30 31 32 33
dim (69)
    on left: 44 45, on right: 43 44
compound_statement (70)
    on left: 47, on right: 12 14 16 18 52 63 65 69 71 73
$@5 (71)
    on left: 46, on right: 47
var_const_stmt_list (72)
    on left: 48 49 50 51, on right: 47 48 49 50
statement (73)
    on left: 52 53 54 55 56 57 58, on right: 48
simple_statement (74)
    on left: 59 61 62, on right: 53
$@6 (75)
    on left: 60, on right: 61
conditional_statement (76)
    on left: 63 65, on right: 54
$@7 (77)
    on left: 64, on right: 65
conditional_if (78)
    on left: 66, on right: 63 65
while_statement (79)
    on left: 69 71, on right: 55
$@8 (80)
    on left: 67, on right: 69
$@9 (81)
    on left: 68, on right: 69
$@10 (82)
    on left: 70, on right: 71
for_statement (83)
    on left: 73, on right: 56
$@11 (84)
    on left: 72, on right: 73
initial_expression (85)
    on left: 74 75 76 77 78, on right: 73 74 75
control_expression (86)
    on left: 79 80 81 82 83, on right: 73 79 80
increment_expression (87)
    on left: 84 85 86 87 88, on right: 73 84 85
statement_for (88)
    on left: 89, on right: 74 77 79 82 84 87
function_invoke_statement (89)
    on left: 90 91, on right: 57
jump_statement (90)
    on left: 92 93 94, on right: 58
variable_reference (91)
    on left: 95 96, on right: 59 62 89 96 122 123
dimension (92)
    on left: 97, on right: 96
logical_expression (93)
    on left: 98 99, on right: 29 34 37 38 59 61 66 69 71 75 76 80 81
    85 86 89 94 98 124 125 131 132
logical_term (94)
    on left: 100 101, on right: 98 99 100
logical_factor (95)
    on left: 102 103, on right: 100 101 102
relation_expression (96)
    on left: 104 105, on right: 103 113
relation_operator (97)
    on left: 106 107 108 109 110 111, on right: 104
arithmetic_expression (98)
    on left: 112 113 114, on right: 97 104 105 112
add_op (99)
    on left: 115 116, on right: 112
term (100)
    on left: 117 118, on right: 112 114 117
mul_op (101)
    on left: 119 120 121, on right: 117
factor (102)
    on left: 122 123 124 125 126 127 128 129 130, on right: 117 118
logical_expression_list (103)
    on left: 131 132, on right: 90 126 127 131
scalar_type (104)
    on left: 133 134 135 136 137, on right: 12 14 19 20 23 24 25 26
    27 40
literal_const (105)
    on left: 138 139 140 141 142 143 144 145 146, on right: 41 42 130


State 0

    0 $accept: . program $end

    $default  reduce using rule 5 (decl_list)

    program    go to state 1
    decl_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: decl_list . funct_def decl_and_def_list
    2 decl_list: decl_list . var_decl
    3          | decl_list . const_decl
    4          | decl_list . funct_decl

    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    VOID    shift, and go to state 6
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8
    STRING  shift, and go to state 9
    CONST   shift, and go to state 10

    funct_def    go to state 11
    funct_decl   go to state 12
    var_decl     go to state 13
    const_decl   go to state 14
    scalar_type  go to state 15


State 3

    0 $accept: program $end .

    $default  accept


State 4

  133 scalar_type: INT .

    $default  reduce using rule 133 (scalar_type)


State 5

  136 scalar_type: BOOL .

    $default  reduce using rule 136 (scalar_type)


State 6

   16 funct_def: VOID . ID L_PAREN R_PAREN $@3 compound_statement
   18          | VOID . ID L_PAREN parameter_list R_PAREN $@4 compound_statement
   21 funct_decl: VOID . ID L_PAREN R_PAREN SEMICOLON
   22           | VOID . ID L_PAREN parameter_list R_PAREN SEMICOLON

    ID  shift, and go to state 16


State 7

  137 scalar_type: FLOAT .

    $default  reduce using rule 137 (scalar_type)


State 8

  134 scalar_type: DOUBLE .

    $default  reduce using rule 134 (scalar_type)


State 9

  135 scalar_type: STRING .

    $default  reduce using rule 135 (scalar_type)


State 10

   40 const_decl: CONST . scalar_type const_list SEMICOLON

    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8
    STRING  shift, and go to state 9

    scalar_type  go to state 17


State 11

    1 program: decl_list funct_def . decl_and_def_list

    $default  reduce using rule 10 (decl_and_def_list)

    decl_and_def_list  go to state 18


State 12

    4 decl_list: decl_list funct_decl .

    $default  reduce using rule 4 (decl_list)


State 13

    2 decl_list: decl_list var_decl .

    $default  reduce using rule 2 (decl_list)


State 14

    3 decl_list: decl_list const_decl .

    $default  reduce using rule 3 (decl_list)


State 15

   12 funct_def: scalar_type . ID L_PAREN R_PAREN $@1 compound_statement
   14          | scalar_type . ID L_PAREN parameter_list R_PAREN $@2 compound_statement
   19 funct_decl: scalar_type . ID L_PAREN R_PAREN SEMICOLON
   20           | scalar_type . ID L_PAREN parameter_list R_PAREN SEMICOLON
   27 var_decl: scalar_type . identifier_list SEMICOLON

    ID  shift, and go to state 19

    identifier_list  go to state 20
    array_decl       go to state 21


State 16

   16 funct_def: VOID ID . L_PAREN R_PAREN $@3 compound_statement
   18          | VOID ID . L_PAREN parameter_list R_PAREN $@4 compound_statement
   21 funct_decl: VOID ID . L_PAREN R_PAREN SEMICOLON
   22           | VOID ID . L_PAREN parameter_list R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 22


State 17

   40 const_decl: CONST scalar_type . const_list SEMICOLON

    ID  shift, and go to state 23

    const_list  go to state 24


State 18

    1 program: decl_list funct_def decl_and_def_list .
    6 decl_and_def_list: decl_and_def_list . var_decl
    7                  | decl_and_def_list . const_decl
    8                  | decl_and_def_list . funct_decl
    9                  | decl_and_def_list . funct_def

    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    VOID    shift, and go to state 6
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8
    STRING  shift, and go to state 9
    CONST   shift, and go to state 10

    $default  reduce using rule 1 (program)

    funct_def    go to state 25
    funct_decl   go to state 26
    var_decl     go to state 27
    const_decl   go to state 28
    scalar_type  go to state 15


State 19

   12 funct_def: scalar_type ID . L_PAREN R_PAREN $@1 compound_statement
   14          | scalar_type ID . L_PAREN parameter_list R_PAREN $@2 compound_statement
   19 funct_decl: scalar_type ID . L_PAREN R_PAREN SEMICOLON
   20           | scalar_type ID . L_PAREN parameter_list R_PAREN SEMICOLON
   34 identifier_list: ID . ASSIGN_OP logical_expression
   35                | ID .
   43 array_decl: ID . dim

    L_PAREN    shift, and go to state 29
    ML_BRACE   shift, and go to state 30
    ASSIGN_OP  shift, and go to state 31

    $default  reduce using rule 35 (identifier_list)

    dim  go to state 32


State 20

   27 var_decl: scalar_type identifier_list . SEMICOLON
   28 identifier_list: identifier_list . COMMA ID
   29                | identifier_list . COMMA ID ASSIGN_OP logical_expression
   30                | identifier_list . COMMA array_decl ASSIGN_OP initial_array
   31                | identifier_list . COMMA array_decl

    COMMA      shift, and go to state 33
    SEMICOLON  shift, and go to state 34


State 21

   32 identifier_list: array_decl . ASSIGN_OP initial_array
   33                | array_decl .

    ASSIGN_OP  shift, and go to state 35

    $default  reduce using rule 33 (identifier_list)


State 22

   16 funct_def: VOID ID L_PAREN . R_PAREN $@3 compound_statement
   18          | VOID ID L_PAREN . parameter_list R_PAREN $@4 compound_statement
   21 funct_decl: VOID ID L_PAREN . R_PAREN SEMICOLON
   22           | VOID ID L_PAREN . parameter_list R_PAREN SEMICOLON

    INT      shift, and go to state 4
    BOOL     shift, and go to state 5
    FLOAT    shift, and go to state 7
    DOUBLE   shift, and go to state 8
    STRING   shift, and go to state 9
    R_PAREN  shift, and go to state 36

    parameter_list  go to state 37
    scalar_type     go to state 38


State 23

   42 const_list: ID . ASSIGN_OP literal_const

    ASSIGN_OP  shift, and go to state 39


State 24

   40 const_decl: CONST scalar_type const_list . SEMICOLON
   41 const_list: const_list . COMMA ID ASSIGN_OP literal_const

    COMMA      shift, and go to state 40
    SEMICOLON  shift, and go to state 41


State 25

    9 decl_and_def_list: decl_and_def_list funct_def .

    $default  reduce using rule 9 (decl_and_def_list)


State 26

    8 decl_and_def_list: decl_and_def_list funct_decl .

    $default  reduce using rule 8 (decl_and_def_list)


State 27

    6 decl_and_def_list: decl_and_def_list var_decl .

    $default  reduce using rule 6 (decl_and_def_list)


State 28

    7 decl_and_def_list: decl_and_def_list const_decl .

    $default  reduce using rule 7 (decl_and_def_list)


State 29

   12 funct_def: scalar_type ID L_PAREN . R_PAREN $@1 compound_statement
   14          | scalar_type ID L_PAREN . parameter_list R_PAREN $@2 compound_statement
   19 funct_decl: scalar_type ID L_PAREN . R_PAREN SEMICOLON
   20           | scalar_type ID L_PAREN . parameter_list R_PAREN SEMICOLON

    INT      shift, and go to state 4
    BOOL     shift, and go to state 5
    FLOAT    shift, and go to state 7
    DOUBLE   shift, and go to state 8
    STRING   shift, and go to state 9
    R_PAREN  shift, and go to state 42

    parameter_list  go to state 43
    scalar_type     go to state 38


State 30

   45 dim: ML_BRACE . INT_CONST MR_BRACE

    INT_CONST  shift, and go to state 44


State 31

   34 identifier_list: ID ASSIGN_OP . logical_expression

    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46
    L_PAREN      shift, and go to state 47
    SUB_OP       shift, and go to state 48
    NOT_OP       shift, and go to state 49
    ID           shift, and go to state 50
    INT_CONST    shift, and go to state 51
    FLOAT_CONST  shift, and go to state 52
    SCIENTIFIC   shift, and go to state 53
    STR_CONST    shift, and go to state 54

    variable_reference     go to state 55
    logical_expression     go to state 56
    logical_term           go to state 57
    logical_factor         go to state 58
    relation_expression    go to state 59
    arithmetic_expression  go to state 60
    term                   go to state 61
    factor                 go to state 62
    literal_const          go to state 63


State 32

   43 array_decl: ID dim .
   44 dim: dim . ML_BRACE INT_CONST MR_BRACE

    ML_BRACE  shift, and go to state 64

    $default  reduce using rule 43 (array_decl)


State 33

   28 identifier_list: identifier_list COMMA . ID
   29                | identifier_list COMMA . ID ASSIGN_OP logical_expression
   30                | identifier_list COMMA . array_decl ASSIGN_OP initial_array
   31                | identifier_list COMMA . array_decl

    ID  shift, and go to state 65

    array_decl  go to state 66


State 34

   27 var_decl: scalar_type identifier_list SEMICOLON .

    $default  reduce using rule 27 (var_decl)


State 35

   32 identifier_list: array_decl ASSIGN_OP . initial_array

    L_BRACE  shift, and go to state 67

    initial_array  go to state 68


State 36

   16 funct_def: VOID ID L_PAREN R_PAREN . $@3 compound_statement
   21 funct_decl: VOID ID L_PAREN R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 69

    $default  reduce using rule 15 ($@3)

    $@3  go to state 70


State 37

   18 funct_def: VOID ID L_PAREN parameter_list . R_PAREN $@4 compound_statement
   22 funct_decl: VOID ID L_PAREN parameter_list . R_PAREN SEMICOLON
   23 parameter_list: parameter_list . COMMA scalar_type ID
   24               | parameter_list . COMMA scalar_type array_decl

    R_PAREN  shift, and go to state 71
    COMMA    shift, and go to state 72


State 38

   25 parameter_list: scalar_type . array_decl
   26               | scalar_type . ID

    ID  shift, and go to state 73

    array_decl  go to state 74


State 39

   42 const_list: ID ASSIGN_OP . literal_const

    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46
    SUB_OP       shift, and go to state 75
    INT_CONST    shift, and go to state 51
    FLOAT_CONST  shift, and go to state 52
    SCIENTIFIC   shift, and go to state 53
    STR_CONST    shift, and go to state 54

    literal_const  go to state 76


State 40

   41 const_list: const_list COMMA . ID ASSIGN_OP literal_const

    ID  shift, and go to state 77


State 41

   40 const_decl: CONST scalar_type const_list SEMICOLON .

    $default  reduce using rule 40 (const_decl)


State 42

   12 funct_def: scalar_type ID L_PAREN R_PAREN . $@1 compound_statement
   19 funct_decl: scalar_type ID L_PAREN R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 78

    $default  reduce using rule 11 ($@1)

    $@1  go to state 79


State 43

   14 funct_def: scalar_type ID L_PAREN parameter_list . R_PAREN $@2 compound_statement
   20 funct_decl: scalar_type ID L_PAREN parameter_list . R_PAREN SEMICOLON
   23 parameter_list: parameter_list . COMMA scalar_type ID
   24               | parameter_list . COMMA scalar_type array_decl

    R_PAREN  shift, and go to state 80
    COMMA    shift, and go to state 72


State 44

   45 dim: ML_BRACE INT_CONST . MR_BRACE

    MR_BRACE  shift, and go to state 81


State 45

  145 literal_const: TRUE .

    $default  reduce using rule 145 (literal_const)


State 46

  146 literal_const: FALSE .

    $default  reduce using rule 146 (literal_const)


State 47

  124 factor: L_PAREN . logical_expression R_PAREN

    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46
    L_PAREN      shift, and go to state 47
    SUB_OP       shift, and go to state 48
    NOT_OP       shift, and go to state 49
    ID           shift, and go to state 50
    INT_CONST    shift, and go to state 51
    FLOAT_CONST  shift, and go to state 52
    SCIENTIFIC   shift, and go to state 53
    STR_CONST    shift, and go to state 54

    variable_reference     go to state 55
    logical_expression     go to state 82
    logical_term           go to state 57
    logical_factor         go to state 58
    relation_expression    go to state 59
    arithmetic_expression  go to state 60
    term                   go to state 61
    factor                 go to state 62
    literal_const          go to state 63


State 48

  123 factor: SUB_OP . variable_reference
  125       | SUB_OP . L_PAREN logical_expression R_PAREN
  127       | SUB_OP . ID L_PAREN logical_expression_list R_PAREN
  129       | SUB_OP . ID L_PAREN R_PAREN
  139 literal_const: SUB_OP . INT_CONST
  141              | SUB_OP . FLOAT_CONST
  143              | SUB_OP . SCIENTIFIC

    L_PAREN      shift, and go to state 83
    ID           shift, and go to state 84
    INT_CONST    shift, and go to state 85
    FLOAT_CONST  shift, and go to state 86
    SCIENTIFIC   shift, and go to state 87

    variable_reference  go to state 88


State 49

  102 logical_factor: NOT_OP . logical_factor

    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46
    L_PAREN      shift, and go to state 47
    SUB_OP       shift, and go to state 48
    NOT_OP       shift, and go to state 49
    ID           shift, and go to state 50
    INT_CONST    shift, and go to state 51
    FLOAT_CONST  shift, and go to state 52
    SCIENTIFIC   shift, and go to state 53
    STR_CONST    shift, and go to state 54

    variable_reference     go to state 55
    logical_factor         go to state 89
    relation_expression    go to state 59
    arithmetic_expression  go to state 60
    term                   go to state 61
    factor                 go to state 62
    literal_const          go to state 63


State 50

   95 variable_reference: ID .
  126 factor: ID . L_PAREN logical_expression_list R_PAREN
  128       | ID . L_PAREN R_PAREN

    L_PAREN  shift, and go to state 90

    $default  reduce using rule 95 (variable_reference)


State 51

  138 literal_const: INT_CONST .

    $default  reduce using rule 138 (literal_const)


State 52

  140 literal_const: FLOAT_CONST .

    $default  reduce using rule 140 (literal_const)


State 53

  142 literal_const: SCIENTIFIC .

    $default  reduce using rule 142 (literal_const)


State 54

  144 literal_const: STR_CONST .

    $default  reduce using rule 144 (literal_const)


State 55

   96 variable_reference: variable_reference . dimension
  122 factor: variable_reference .

    ML_BRACE  shift, and go to state 91

    $default  reduce using rule 122 (factor)

    dimension  go to state 92


State 56

   34 identifier_list: ID ASSIGN_OP logical_expression .
   98 logical_expression: logical_expression . OR_OP logical_term

    OR_OP  shift, and go to state 93

    $default  reduce using rule 34 (identifier_list)


State 57

   99 logical_expression: logical_term .
  100 logical_term: logical_term . AND_OP logical_factor

    AND_OP  shift, and go to state 94

    $default  reduce using rule 99 (logical_expression)


State 58

  101 logical_term: logical_factor .

    $default  reduce using rule 101 (logical_term)


State 59

  103 logical_factor: relation_expression .
  113 arithmetic_expression: relation_expression .

    AND_OP     reduce using rule 103 (logical_factor)
    AND_OP     [reduce using rule 113 (arithmetic_expression)]
    OR_OP      reduce using rule 103 (logical_factor)
    OR_OP      [reduce using rule 113 (arithmetic_expression)]
    R_PAREN    reduce using rule 103 (logical_factor)
    R_PAREN    [reduce using rule 113 (arithmetic_expression)]
    COMMA      reduce using rule 103 (logical_factor)
    COMMA      [reduce using rule 113 (arithmetic_expression)]
    SEMICOLON  reduce using rule 103 (logical_factor)
    SEMICOLON  [reduce using rule 113 (arithmetic_expression)]
    R_BRACE    reduce using rule 103 (logical_factor)
    R_BRACE    [reduce using rule 113 (arithmetic_expression)]
    $default   reduce using rule 113 (arithmetic_expression)


State 60

  104 relation_expression: arithmetic_expression . relation_operator arithmetic_expression
  105                    | arithmetic_expression .
  112 arithmetic_expression: arithmetic_expression . add_op term

    LE_OP   shift, and go to state 95
    NE_OP   shift, and go to state 96
    GE_OP   shift, and go to state 97
    EQ_OP   shift, and go to state 98
    ADD_OP  shift, and go to state 99
    SUB_OP  shift, and go to state 100
    LT_OP   shift, and go to state 101
    GT_OP   shift, and go to state 102

    LE_OP     [reduce using rule 105 (relation_expression)]
    NE_OP     [reduce using rule 105 (relation_expression)]
    GE_OP     [reduce using rule 105 (relation_expression)]
    EQ_OP     [reduce using rule 105 (relation_expression)]
    ADD_OP    [reduce using rule 105 (relation_expression)]
    SUB_OP    [reduce using rule 105 (relation_expression)]
    LT_OP     [reduce using rule 105 (relation_expression)]
    GT_OP     [reduce using rule 105 (relation_expression)]
    $default  reduce using rule 105 (relation_expression)

    relation_operator  go to state 103
    add_op             go to state 104


State 61

  114 arithmetic_expression: term .
  117 term: term . mul_op factor

    MUL_OP  shift, and go to state 105
    DIV_OP  shift, and go to state 106
    MOD_OP  shift, and go to state 107

    $default  reduce using rule 114 (arithmetic_expression)

    mul_op  go to state 108


State 62

  118 term: factor .

    $default  reduce using rule 118 (term)


State 63

  130 factor: literal_const .

    $default  reduce using rule 130 (factor)


State 64

   44 dim: dim ML_BRACE . INT_CONST MR_BRACE

    INT_CONST  shift, and go to state 109


State 65

   28 identifier_list: identifier_list COMMA ID .
   29                | identifier_list COMMA ID . ASSIGN_OP logical_expression
   43 array_decl: ID . dim

    ML_BRACE   shift, and go to state 30
    ASSIGN_OP  shift, and go to state 110

    $default  reduce using rule 28 (identifier_list)

    dim  go to state 32


State 66

   30 identifier_list: identifier_list COMMA array_decl . ASSIGN_OP initial_array
   31                | identifier_list COMMA array_decl .

    ASSIGN_OP  shift, and go to state 111

    $default  reduce using rule 31 (identifier_list)


State 67

   36 initial_array: L_BRACE . literal_list R_BRACE

    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46
    L_PAREN      shift, and go to state 47
    SUB_OP       shift, and go to state 48
    NOT_OP       shift, and go to state 49
    ID           shift, and go to state 50
    INT_CONST    shift, and go to state 51
    FLOAT_CONST  shift, and go to state 52
    SCIENTIFIC   shift, and go to state 53
    STR_CONST    shift, and go to state 54

    $default  reduce using rule 39 (literal_list)

    literal_list           go to state 112
    variable_reference     go to state 55
    logical_expression     go to state 113
    logical_term           go to state 57
    logical_factor         go to state 58
    relation_expression    go to state 59
    arithmetic_expression  go to state 60
    term                   go to state 61
    factor                 go to state 62
    literal_const          go to state 63


State 68

   32 identifier_list: array_decl ASSIGN_OP initial_array .

    $default  reduce using rule 32 (identifier_list)


State 69

   21 funct_decl: VOID ID L_PAREN R_PAREN SEMICOLON .

    $default  reduce using rule 21 (funct_decl)


State 70

   16 funct_def: VOID ID L_PAREN R_PAREN $@3 . compound_statement

    $default  reduce using rule 46 ($@5)

    compound_statement  go to state 114
    $@5                 go to state 115


State 71

   18 funct_def: VOID ID L_PAREN parameter_list R_PAREN . $@4 compound_statement
   22 funct_decl: VOID ID L_PAREN parameter_list R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 116

    $default  reduce using rule 17 ($@4)

    $@4  go to state 117


State 72

   23 parameter_list: parameter_list COMMA . scalar_type ID
   24               | parameter_list COMMA . scalar_type array_decl

    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8
    STRING  shift, and go to state 9

    scalar_type  go to state 118


State 73

   26 parameter_list: scalar_type ID .
   43 array_decl: ID . dim

    ML_BRACE  shift, and go to state 30

    $default  reduce using rule 26 (parameter_list)

    dim  go to state 32


State 74

   25 parameter_list: scalar_type array_decl .

    $default  reduce using rule 25 (parameter_list)


State 75

  139 literal_const: SUB_OP . INT_CONST
  141              | SUB_OP . FLOAT_CONST
  143              | SUB_OP . SCIENTIFIC

    INT_CONST    shift, and go to state 85
    FLOAT_CONST  shift, and go to state 86
    SCIENTIFIC   shift, and go to state 87


State 76

   42 const_list: ID ASSIGN_OP literal_const .

    $default  reduce using rule 42 (const_list)


State 77

   41 const_list: const_list COMMA ID . ASSIGN_OP literal_const

    ASSIGN_OP  shift, and go to state 119


State 78

   19 funct_decl: scalar_type ID L_PAREN R_PAREN SEMICOLON .

    $default  reduce using rule 19 (funct_decl)


State 79

   12 funct_def: scalar_type ID L_PAREN R_PAREN $@1 . compound_statement

    $default  reduce using rule 46 ($@5)

    compound_statement  go to state 120
    $@5                 go to state 115


State 80

   14 funct_def: scalar_type ID L_PAREN parameter_list R_PAREN . $@2 compound_statement
   20 funct_decl: scalar_type ID L_PAREN parameter_list R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 121

    $default  reduce using rule 13 ($@2)

    $@2  go to state 122


State 81

   45 dim: ML_BRACE INT_CONST MR_BRACE .

    $default  reduce using rule 45 (dim)


State 82

   98 logical_expression: logical_expression . OR_OP logical_term
  124 factor: L_PAREN logical_expression . R_PAREN

    OR_OP    shift, and go to state 93
    R_PAREN  shift, and go to state 123


State 83

  125 factor: SUB_OP L_PAREN . logical_expression R_PAREN
